# AFP1_kisProjekt

./: README.md
backend/: .rustfmt.toml  Cargo.toml  jokedb.sql  routes.md  routes.txt
backend/configuration/: base.toml
backend/src/: configuration.rs  lib.rs  main.rs  models.rs  routes.rs  telemetry.rs  users.rs
backend/src/routes/: health_check.rs  jokes.rs  login.rs  logout.rs  register.rs  saved.rs  users.rs  votes.rs
docs/: DATABASE.txt  FUNKSPEC.md  KOVSPEC.md  RENDSZERTERV.md  routes.md
frontend/: package.json  tsconfig.json
frontend/css/: index.css  main_page_admin.css  new_post.css  regisztracio.css
frontend/html/: index.html  main_page_admin.html  main_page_user.html  new_post.html  regisztracio.html
frontend/src/: config.ts  login.ts  main.ts  main_page_admin.ts  main_page_user.ts  new_post.ts  preload.ts  regisztracio.ts  renderer.ts  types.d.ts  types.ts
tests/: backend_auth_test.md  backend_routes_test.md  frontend_admin_page_test.md  frontend_login_test  frontend_login_test.md  frontend_new_post_test.md  main_page_user.md  registration.md
